Prevent bottom scrollbar

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -38,6 +38,7 @@ body {
     max-width: 100vw;
     background-color: $c1;
     font-family: $font2;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
